no funciona res des pagament

--- a/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
+++ b/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
@@ -156,6 +156,7 @@
                     "<div class='col-12'>" +
                     "<label for='direccion'>Dirección</label>" +
                     "<select class='form-select' id='direccion' required></select>" +
+                    "<p class='text-pc-economic-default mt-1 mb-1'>Si quieres cambiar alguna direccion de tu cuenta puedes acceder pulsando <a href='/areaclients'>aqui</a> </p>" +
                     "</div>" +
                     "<div class='col-12'>" +
                     "<label for='notas'>Notas</label>" +
