feat: valoracions can now be shown on the view

--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -80,6 +80,15 @@
                 <h3>Descripción</h3>
                 <p th:text="${propietats.article.descripcio}"></p>
             </div>
+            <div class="col-12">
+                <h3>Valoraciones</h3>
+
+                <div th:each="valoracio : ${valoracions}" th:if="${propietats.article.id == valoracio.article.id}">
+                    <p th:text="${valoracio.client.persona.name}"></p>
+                    <p th:text="${valoracio.comentari}"></p>
+                    <p th:text="${valoracio.valoracio}"></p>
+                </div>
+            </div>
         </div>
     </div>
 </main>
