--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -1,176 +1,205 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout.html :: head">
-</head>
-<head>
-    <title th:text="${propietats.article.nom} +' | PCEconomic'"></title>
-</head>
+    <head th:replace="layout/layout.html :: head">
+    </head>
+    <head>
+        <title th:text="${propietats.article.nom} +' | PCEconomic'"></title>
+    </head>
 
-<nav th:replace="layout/layout.html :: navbar"></nav>
-<body class="bgbd" th:attr="data-id-article=${propietats.article.id}">
-<main class="container bg-cont mt-md-5 mt-5" th:attr="data-id=${propietats.id}">
-    <div class="col-12 row m-2 justify-content-center">
-        <div class="col-md-6 col-sm-12">
-            <div id="carouselExampleIndicators" class="carousel slide">
-                <div class="carousel-inner">
-                    <div class="carousel-item" th:each="foto : ${propietats.imatges}"
-                    >
-                        <img class="d-block img-fluid imgSizeArticle"
-                             th:src="@{/img/productes/{article}/{prop}/{foto}(article=${propietats.article.id},prop=${propietats.id},foto=${foto.path})}"
-                             id="propietats.id" th:alt="${foto.id}">
+    <nav th:replace="layout/layout.html :: navbar"></nav>
+    <body class="bgbd" th:attr="data-id-article=${propietats.article.id}">
+        <main class="container bg-cont mt-md-5 mt-5" th:attr="data-id=${propietats.id}">
+            <div class="col-12 row m-2 justify-content-center">
+                <div class="col-md-6 col-sm-12">
+                    <div id="carouselExampleIndicators" class="carousel slide">
+                        <div class="carousel-inner">
+                            <div class="carousel-item" th:each="foto : ${propietats.imatges}"
+                            >
+                                <img class="d-block img-fluid imgSizeArticle"
+                                     th:src="@{/img/productes/{article}/{prop}/{foto}(article=${propietats.article.id},prop=${propietats.id},foto=${foto.path})}"
+                                     id="propietats.id" th:alt="${foto.id}">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" data-bs-slide="prev"
+                                data-bs-target="#carouselExampleIndicators"
+                                type="button">
+                            <span class="carousel-color" aria-hidden="true"><i class="bi bi-arrow-left"></i></span>
+                        </button>
+                        <button class="carousel-control-next" data-bs-slide="next"
+                                data-bs-target="#carouselExampleIndicators"
+                                type="button">
+                            <span class="carousel-color" aria-hidden="true"><i class="bi bi-arrow-right"></i></span>
+                        </button>
                     </div>
                 </div>
-                <button class="carousel-control-prev" data-bs-slide="prev"
-                        data-bs-target="#carouselExampleIndicators"
-                        type="button">
-                    <span class="carousel-color" aria-hidden="true"><i class="bi bi-arrow-left"></i></span>
-                </button>
-                <button class="carousel-control-next" data-bs-slide="next"
-                        data-bs-target="#carouselExampleIndicators"
-                        type="button">
-                    <span class="carousel-color" aria-hidden="true"><i class="bi bi-arrow-right"></i></span>
-                </button>
-            </div>
-        </div>
 
-        <div class="col-md-6 col-sm-12">
-            <h1 th:text="${propietats.article.nom}" class="mt-md-3 mt-5"></h1>
-            <h5 class="text-body mt-2"
-                th:text="'Marca: ' + ${propietats.article.marca.name} + ' - P/N: ' + ${propietats.article.marca.cif} "></h5>
+                <div class="col-md-6 col-sm-12">
+                    <h1 th:text="${propietats.article.nom}" class="mt-md-3 mt-5"></h1>
+                    <h5 class="text-body mt-2"
+                        th:text="'Marca: ' + ${propietats.article.marca.name} + ' - P/N: ' + ${propietats.article.marca.cif} "></h5>
 
-            <div class="row justify-content-center align-items-center">
-                <div th:if="!${preuOferta}" class="col-6 d-flex">
-                    <span class="text-center mt-3 col h1" th:text="${preuEuros}"></span>
-                </div>
-                <div th:if="${preuOferta}" class="col-6 d-flex">
+                    <div class="row justify-content-center align-items-center">
+                        <div th:if="!${preuOferta}" class="col-6 d-flex">
+                            <span class="text-center mt-3 col h1" th:text="${preuEuros}"></span>
+                        </div>
+                        <div th:if="${preuOferta}" class="col-6 d-flex">
                             <span class="text-center mt-3 col h1 text-decoration-line-through"
                                   th:text="${preuEuros}"></span>
-                    <span class="text-center mt-3 col h1 text-danger" th:if="${preuOferta}"
-                          th:text="${preuOferta}"></span>
-                </div>
-                <div class="col-12 mt-3 ">
-                    <label for="cantidad" class="form-label">Cantidad : </label>
-                    <input id="cantidad" class="form-control border border-secondary" type="number" min="1"
-                           value="1"
-                           th:max="${propietats.stock}">
-                </div>
-            </div>
-            <div class="d-flex justify-content-evenly mt-5">
+                            <span class="text-center mt-3 col h1 text-danger" th:if="${preuOferta}"
+                                  th:text="${preuOferta}"></span>
+                        </div>
+                        <div class="col-12 mt-3 ">
+                            <label for="cantidad" class="form-label">Cantidad : </label>
+                            <input id="cantidad" class="form-control border border-secondary" type="number" min="1"
+                                   value="1"
+                                   th:max="${propietats.stock}">
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-evenly mt-5">
 
-                <div id="addcarrito" class="col-5 row"></div>
-                <div id="comprar" class="col-5 row"></div>
-            </div>
+                        <div id="addcarrito" class="col-5 row"></div>
+                        <div id="comprar" class="col-5 row"></div>
+                    </div>
 
-            <div id="articles-disponibles" class="row mt-4 justify-content-center">
-                <span class="col-12 text-center mt-1 mb-2">Elige tu mismo articulo pero con distintas propiedades!</span>
-                <div class="spinner-border text-secondary" role="status" id="loading-wheel">
-                    <span class="visually-hidden">Loading...</span>
+                    <div id="articles-disponibles" class="row mt-4 justify-content-center">
+                        <span class="col-12 text-center mt-1 mb-2">Elige tu mismo articulo pero con distintas propiedades!</span>
+                        <div class="spinner-border text-secondary" role="status" id="loading-wheel">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
 
-        <div class="col-12 mt-5 row justify-content-center">
-            <div class="col-12">
-                <h3>Propietades del producto</h3>
-                <span th:each="val : ${propietats.valor}">
+                <div class="col-12 mt-5 row justify-content-center">
+                    <div class="col-12">
+                        <h3>Propietades del producto</h3>
+                        <span th:each="val : ${propietats.valor}">
                         <span th:each="prop : ${val.propietat}">
                             <p th:text="' - ' + ${prop.nom} + ': ' + ${val.valor}"></p>
                         </span>
                     </span>
-                <h3>Descripción</h3>
-                <p th:text="${propietats.article.descripcio}"></p>
-            </div>
-            <div class="col-12">
-                <h3>Valoraciones</h3>
+                        <h3>Descripción</h3>
+                        <p th:text="${propietats.article.descripcio}"></p>
+                    </div>
+                    <div class="col-12">
+                        <h3>Valoraciones</h3>
 
-                <div th:if="${valoracions == null || valoracions.isEmpty()}">
-                    Actualmente no hay valoraciones para este producto
+                        <div th:if="${valoracions == null || valoracions.isEmpty()}">
+                            Actualmente no hay valoraciones para este producto
+                        </div>
+
+                        <button th:if="${client == 'LOGOUT'}" type="button" class="btn btn-pc-economic-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            Añadir Valoracion
+                        </button>
+
+                        <div th:each="valoracio : ${valoracions}" th:if="${propietats.article.id == valoracio.article.id}">
+                            <p th:text="${valoracio.client.persona.name}"></p>
+                            <p th:text="${valoracio.comentari}"></p>
+                            <p th:text="${valoracio.valoracio}"></p>
+                            <div th:if="${user != null && user.id == valoracio.client.id}">
+                                <!--<a>Editar</a>
+                                <a th:href="@{/valoracio/delete/{id}(id=${valoracio.id})}">Eliminar</a>-->
+                                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                                    <i class="bi bi-trash"></i>
+                                </button>
+                            </div>
+
+                            <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h1 class="modal-title fs-5" id="deleteModalLabel">Eliminar Valoracion</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Esta seguro que desea eliminar la valoracion?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-pc-economic-default" data-bs-dismiss="modal">
+                                                No
+                                            </button>
+                                            <a th:href="@{/areaclients/deletevaloracio/{id}/{idart}/{idprop}(id=${valoracio.id}, idart=${propietats.article.id}, idprop=${propietats.id})}"
+                                               class="btn btn-danger">Si</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
                 </div>
-
-                <button th:if="${client == 'LOGOUT'}" type="button" class="btn btn-pc-economic-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    Añadir Valoracion
-                </button>
-
-                <div th:each="valoracio : ${valoracions}" th:if="${propietats.article.id == valoracio.article.id}">
-                    <p th:text="${valoracio.client.persona.name}"></p>
-                    <p th:text="${valoracio.comentari}"></p>
-                    <p th:text="${valoracio.valoracio}"></p>
-                </div>
-
             </div>
-        </div>
-    </div>
-</main>
-<div th:replace="layout/layout.html :: jquery"></div>
+        </main>
+        <div th:replace="layout/layout.html :: jquery"></div>
 
-<script>
-    $(document).ready(function () {
-        $(".carousel-item:first").addClass("active");
-        $("#comprar").append(
-            "<a  class=\"btn btn-pc-economic-dark text-white col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=false'> Comprar </a>"
-        )
-        $("#addcarrito").append(
-            "<a  class=\"btn btn-pc-economic-light text-white col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=true'> Añadir al carrito </a>"
-        )
-        $('#cantidad').bind('input', function () {
-            $("#comprar").empty();
-            $("#addcarrito").empty();
-            $("#comprar").append(
-                "<a  class=\"btn btn-pc-economic-dark text-white col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=false'> Comprar </a>"
-            )
-            $("#addcarrito").append(
-                "<a  class=\"btn btn-pc-economic-light text-white col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=true'> Añadir al carrito </a>"
-            )
-        });
-    });
+        <script>
+            $(document).ready(function () {
+                $(".carousel-item:first").addClass("active");
+                $("#comprar").append(
+                    "<a  class=\"btn btn-pc-economic-dark text-white col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=false'> Comprar </a>"
+                )
+                $("#addcarrito").append(
+                    "<a  class=\"btn btn-pc-economic-light text-white col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=true'> Añadir al carrito </a>"
+                )
+                $('#cantidad').bind('input', function () {
+                    $("#comprar").empty();
+                    $("#addcarrito").empty();
+                    $("#comprar").append(
+                        "<a  class=\"btn btn-pc-economic-dark text-white col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=false'> Comprar </a>"
+                    )
+                    $("#addcarrito").append(
+                        "<a  class=\"btn btn-pc-economic-light text-white col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=true'> Añadir al carrito </a>"
+                    )
+                });
+            });
 
 
-    $.ajax({
-        url: "/api/propietats",
-        type: "GET",
-        dataType: "json",
-        beforeSend: function () {
-            $("#loading-wheel").show();
-        },
-        complete: function () {
-            $("#loading-wheel").hide();
-        },
-        success: function (propietats) {
-            var idPropietat = $("main").attr("data-id");
-            var idArticle = $("body").attr("data-id-article");
-            var auxArr = [];
+            $.ajax({
+                url: "/api/propietats",
+                type: "GET",
+                dataType: "json",
+                beforeSend: function () {
+                    $("#loading-wheel").show();
+                },
+                complete: function () {
+                    $("#loading-wheel").hide();
+                },
+                success: function (propietats) {
+                    var idPropietat = $("main").attr("data-id");
+                    var idArticle = $("body").attr("data-id-article");
+                    var auxArr = [];
 
-            for (var prop of propietats) {
-                for (var v of prop.valor) {
-                    if (prop.article.id == idArticle && prop.id == idPropietat) {
-                        $("#articles-disponibles").append(
-                            "<div class='col-12'> <h3 class='mb-3 mt-2'>" + v.propietat[0].nom + "</h3> <div id='" + v.propietat[0].nom + "' class='d-flex justify-content-evenly'> </div></div>"
-                        )
-                        $("#" + v.propietat[0].nom).append(
-                            "<button class='btn btn-pc-economic-dark text-white col-2'>" + v.valor + "</button>"
-                        )
+                    for (var prop of propietats) {
+                        for (var v of prop.valor) {
+                            if (prop.article.id == idArticle && prop.id == idPropietat) {
+                                $("#articles-disponibles").append(
+                                    "<div class='col-12'> <h3 class='mb-3 mt-2'>" + v.propietat[0].nom + "</h3> <div id='" + v.propietat[0].nom + "' class='d-flex justify-content-evenly'> </div></div>"
+                                )
+                                $("#" + v.propietat[0].nom).append(
+                                    "<button class='btn btn-pc-economic-dark text-white col-2'>" + v.valor + "</button>"
+                                )
 
-                        for (var prop2 of propietats) {
-                            for (var v2 of prop2.valor) {
-                                if (prop2.article.id == idArticle && prop2.id != idPropietat && v2.propietat[0].nom == v.propietat[0].nom && v2.valor != v.valor) {
-                                    var auxArrIndex = auxArr.indexOf(v2.valor);
-                                    if (auxArrIndex == -1) {
-                                        auxArr.push(v2.valor);
-                                        $("#" + v.propietat[0].nom).append(
-                                            "<a href='/article/" + prop2.article.id + "/" + prop2.id  + "' class='btn btn-pc-economic-light text-white col-2'>" + v2.valor + "</a>"
-                                        );
+                                for (var prop2 of propietats) {
+                                    for (var v2 of prop2.valor) {
+                                        if (prop2.article.id == idArticle && prop2.id != idPropietat && v2.propietat[0].nom == v.propietat[0].nom && v2.valor != v.valor) {
+                                            var auxArrIndex = auxArr.indexOf(v2.valor);
+                                            if (auxArrIndex == -1) {
+                                                auxArr.push(v2.valor);
+                                                $("#" + v.propietat[0].nom).append(
+                                                    "<a href='/article/" + prop2.article.id + "/" + prop2.id + "' class='btn btn-pc-economic-light text-white col-2'>" + v2.valor + "</a>"
+                                                );
+                                            }
+
+                                        }
                                     }
-
                                 }
                             }
                         }
                     }
                 }
-            }
-        }
-    });
-</script>
+            });
+        </script>
 
-<footer th:replace="layout/layout :: footer"></footer>
-</body>
+        <footer th:replace="layout/layout :: footer"></footer>
+    </body>
 </html>
