--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -35,30 +35,31 @@
 
         <div class="col-md-6 col-sm-12">
             <h1 th:text="${propietats.article.nom}" class="mt-md-3 mt-5"></h1>
+            <div class="row">
+                <div th:if="!${preuOferta}" class="col-6 d-flex">
+                    <span class="col h1 text-pc-economic-dark" th:text="${preuEuros} "></span>
+                </div>
+                <div th:if="${preuOferta}" class="col-6 d-flex">
+                            <span class="col h1 text-decoration-line-through"
+                                  th:text="${preuEuros}"></span>
+                    <span class="col h1 text-danger" th:if="${preuOferta}"
+                          th:text="${preuOferta}"></span>
+                </div>
+            </div>
             <h5 class="text-body mt-2"
                 th:text="'Marca: ' + ${propietats.article.marca.name} + ' - P/N: ' + ${propietats.article.marca.cif} "></h5>
 
-            <div class="row justify-content-center align-items-center">
-                <div th:if="!${preuOferta}" class="col-6 d-flex">
-                    <span class="text-center mt-3 col h1" th:text="${preuEuros}"></span>
+            <div class="row justify-content-start align-items-center">
+                <div class="col-12 row">
+                    <label for="cantidad" class="form-label h3">Cantidad</label>
+                    <div class="row justify-content-center col-6">
+                        <div>
+                            <input id="cantidad" class="form-control border border-secondary col-3" type="number" min="1"
+                                   value="1"
+                                   th:max="${propietats.stock}">
+                        </div>
+                    </div>
                 </div>
-                <div th:if="${preuOferta}" class="col-6 d-flex">
-                            <span class="text-center mt-3 col h1 text-decoration-line-through"
-                                  th:text="${preuEuros}"></span>
-                    <span class="text-center mt-3 col h1 text-danger" th:if="${preuOferta}"
-                          th:text="${preuOferta}"></span>
-                </div>
-                <div class="col-12 mt-3 ">
-                    <label for="cantidad" class="form-label">Cantidad : </label>
-                    <input id="cantidad" class="form-control border border-secondary" type="number" min="1"
-                           value="1"
-                           th:max="${propietats.stock}">
-                </div>
-            </div>
-            <div class="d-flex justify-content-evenly mt-5">
-
-                <div id="addcarrito" class="col-5 row"></div>
-                <div id="comprar" class="col-5 row"></div>
             </div>
 
             <div id="articles-disponibles" class="row mt-4 justify-content-center">
@@ -66,6 +67,11 @@
                 <div class="spinner-border text-secondary" role="status" id="loading-wheel">
                     <span class="visually-hidden">Loading...</span>
                 </div>
+            </div>
+
+            <div class="d-flex justify-content-evenly mt-5">
+                <div id="addcarrito" class="col-5 row"></div>
+                <div id="comprar" class="col-5 row"></div>
             </div>
         </div>
 
@@ -89,19 +95,19 @@
     $(document).ready(function () {
         $(".carousel-item:first").addClass("active");
         $("#comprar").append(
-            "<a  class=\"btn btn-pc-economic-dark text-white col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=false'> Comprar </a>"
+            "<a  class=\"btn btn-success col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=false'> Comprar </a>"
         )
         $("#addcarrito").append(
-            "<a  class=\"btn btn-pc-economic-light text-white col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=true'> Añadir al carrito </a>"
+            "<a  class=\"btn btn-pc-economic-dark text-white col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=true'> Añadir al carrito </a>"
         )
         $('#cantidad').bind('input', function () {
             $("#comprar").empty();
             $("#addcarrito").empty();
             $("#comprar").append(
-                "<a  class=\"btn btn-pc-economic-dark text-white col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=false'> Comprar </a>"
+                "<a  class=\"btn btn-success col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=false'> Comprar </a>"
             )
             $("#addcarrito").append(
-                "<a  class=\"btn btn-pc-economic-light text-white col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=true'> Añadir al carrito </a>"
+                "<a  class=\"btn btn-pc-economic-dark text-white col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=true'> Añadir al carrito </a>"
             )
         });
     });
@@ -129,9 +135,9 @@
                             "<div class='col-12'> <h3 class='mb-3 mt-2'>" + v.propietat[0].nom + "</h3> <div id='" + v.propietat[0].nom + "' class='d-flex justify-content-evenly'> </div></div>"
                         )
                         $("#" + v.propietat[0].nom).append(
-                            "<button class='btn btn-pc-economic-dark text-white col-2'>" + v.valor + "</button>"
+                            "<button class='btn btn-pc-economic-dark text-white col-4 col-lg-2'>" + v.valor + "</button>"
                         )
-
+                        $("#" + v.propietat[0].nom).attr("class", "d-flex justify-content-evenly flex-wrap");
                         for (var prop2 of propietats) {
                             for (var v2 of prop2.valor) {
                                 if (prop2.article.id == idArticle && prop2.id != idPropietat && v2.propietat[0].nom == v.propietat[0].nom && v2.valor != v.valor) {
@@ -139,7 +145,7 @@
                                     if (auxArrIndex == -1) {
                                         auxArr.push(v2.valor);
                                         $("#" + v.propietat[0].nom).append(
-                                            "<a href='/article/" + prop2.article.id + "/" + prop2.id  + "' class='btn btn-pc-economic-light text-white col-2'>" + v2.valor + "</a>"
+                                            "<a href='/article/" + prop2.article.id + "/" + prop2.id + "' class='btn btn-pc-economic-light text-white col-4 col-lg-2'>" + v2.valor + "</a>"
                                         );
                                     }
 
