--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -8,7 +8,14 @@
 <nav th:replace="layout/layout.html :: navbar"></nav>
 <body class="bgbd">
 <main class="container-lg bg-cont mt-md-5 mt-1">
-    <h1 class="mt-3 text-center"> Bienvenido a PCEconomic! </h1>
+    <section id="productos-recomendados" class="row mt-3 justify-content-center">
+        <h2 class="text-center">Continúa desde donde lo dejaste</h2>
+        <div id="articles-recomenats" class="row mt-2 justify-content-center mb-2">
+            <div class="spinner-border text-secondary" role="status" id="loading-wheel2">
+                <span class="visually-hidden">Cargando...</span>
+            </div>
+        </div>
+    </section>
     <section id="productes" class="row mt-5 justify-content-center">
         <h2 class="text-center">Estos son algunos de los productos que te pueden interesar</h2>
         <div id="articles" class="row mt-2 justify-content-center mb-2">
@@ -22,6 +29,10 @@
 </body>
 <div th:replace="layout/layout.html :: jquery"></div>
 <script>
+    <!-- Recomendats -->
+
+
+    <!-- Print -->
     $.ajax({
         url: "api/propietats",
         type: "GET",
