fix: fixed valoration added to wrong client and article

--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -158,6 +158,42 @@
                             Añadir Valoracion
                         </button>
 
+                        <div class="modal fade" id="addValoration" tabindex="-1" aria-labelledby="addValorationLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="addValorationLabel">Añadir Valoracion</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form action="#"
+                                              th:action="@{/areaclients/addvaloracio/{idArticle}/{idClient}/{idPropietat}(idArticle=${propietats.article.id}, idClient=${user.id}, idPropietat=${propietats.id})}"
+                                              th:object="${addvaloracio}" method="post">
+                                            <div class="mb-3">
+                                                <label for="valoracio" class="form-label">Valoracion</label>
+                                                <input id="valoracio"
+                                                       th:field="*{valoracio}"
+                                                       class="rating"
+                                                       max="5"
+                                                       oninput="this.style.setProperty('--value', `${this.valueAsNumber}`)"
+                                                       step="0.5"
+                                                       th:style="'--value: ' + *{valoracio}"
+                                                       type="range"
+                                                       value="2.5"
+                                                />
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="comentari" class="form-label">Comentario</label>
+                                                <input type="text" id="comentari" th:field="*{comentari}">
+                                            </div>
+                                            <button type="submit" class="btn btn-pc-economic-dark">Añadir</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
                     </div>
 
